retrieve stock data from server

--- a/src/main/resources/de/google/gwt/stockwatcher/client/StockWatcherMessages_de.properties
+++ b/src/main/resources/de/google/gwt/stockwatcher/client/StockWatcherMessages_de.properties
@@ -1,2 +1,4 @@
 lastUpdate = Letzte Aktualisierung: {0,date,medium} {0,time,medium}
-invalidSymbol = ''{0}'' ist kein g&uuml;ltiges Aktiensymbol.
+invalidSymbol = ''{0}'' ist kein gultiges Aktiensymbol.
+retrieveJsonFailed = Fehler bei dem Versuch Json zu empfangen.
+retrieveJsonFailedWithDetails = Fehler bei dem Versuch Json zu empfangen ({0}).
